[tool.poetry]
name = "lb1_tml"
version = "0.1.0"
description = "lab 1 texn. mashine learning"
authors = ["Kateryna Barbasheva <katherina.barbasheva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.12"
torch = "^1.10.2"
torchvision = "^0.11.3"
tqdm = "^4.66.2"
matplotlib = "^3.7.5"
numpy = "^1.24.4"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
ruff = "^0.0.254"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
